Moved main app code to its own class

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -576,7 +576,7 @@ Rails/HasAndBelongsToMany:
   - app/models/**/*.rb
 Rails/Output:
   Description: Checks for calls to puts, print, etc.
-  Enabled: true
+  Enabled: false
   Include:
   - app/**/*.rb
   - config/**/*.rb
